--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -38,3 +38,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+input[readonly] {
+  background-color: #f5f5f5 !important;
+  cursor: not-allowed;
+}
